# terraform-provider-tofusoup

./: .gitignore  CLAUDE.md  HANDOFF.md  Makefile  TESTING.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml  test-conformance.yml
.provide/: HANDOFF-INDEX.md  HANDOFF-PART-06.md  HANDOFF-PART-07.md  HANDOFF-PART-08.md  HANDOFF-PART-09.md  HANDOFF-PART-10.md  HANDOFF-PART-11.md  HANDOFF-PART-12.md  HANDOFF-PART-13.md  HANDOFF-PART-14.md  HANDOFF-PARTS-01-12.md  HANDOFF.md
examples/data-sources/provider_info/: basic.tf
examples/data-sources/state_info/: basic.tf
examples/data-sources/state_outputs/: basic.tf
examples/data-sources/state_resources/: basic.tf
examples/data-sources/tofusoup_module_info/: main.tf  outputs.tf
examples/data-sources/tofusoup_module_versions/: README.md
examples/data-sources/tofusoup_provider_info/: README.md  main.tf
examples/data-sources/tofusoup_provider_versions/: outputs.tf
examples/data-sources/tofusoup_registry_search/: outputs.tf
examples/data-sources/tofusoup_state_info/: main.tf  outputs.tf
examples/data_source/state_info/: basic.tf
src/soup/tf/: __init__.py
src/tofusoup/: __init__.py
tests/: test_provider.py
tests/data_sources/: conftest.py  test_module_info.py  test_provider_info.py  test_provider_versions.py  test_registry_search.py  test_state_info.py  test_state_resources.py
tests/data_sources/test_module_info/: test_basic.py  test_edge_cases.py  test_errors.py  test_read.py  test_validation.py
tests/data_sources/test_module_search/: test_basic.py  test_edge_cases.py  test_errors.py  test_read.py  test_validation.py
tests/data_sources/test_state_outputs/: test_basic.py  test_edge_cases.py  (+3 more)
(+15 files in other folders)
