[project]
name = "terraform-provider-tofusoup"
version = "0.1.0"
description = "Terraform provider for TofuSoup registry queries and state inspection"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "pyvider",
    "tofusoup",
    "flavorpack",
    "provide-foundation[all]",
]

[project.optional-dependencies]
dev = [
    "provide-testkit[all]>=0.0.1100",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "plating",
]

[tool.hatch.build.targets.wheel]
packages = ["src/soup"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.plating]
provider_name = "tofusoup"
output_dir = "docs"
