[project]
name = "terraform-provider-tofusoup"
version = "0.1.0"
description = "Terraform provider for TofuSoup registry queries and state inspection"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "pyvider",
    "tofusoup",
    "flavorpack",
    "provide-foundation[all]",
]

[dependency-groups]
dev = [
    "provide-testkit[all]",
    "plating",
]
docs = [
    "provide-testkit[docs]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/soup"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.plating]
provider_name = "tofusoup"
output_dir = "docs"
